--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,19 @@
 molecules3d
 AIChat-master
 /experimental
+lettersKeyboardPopOut
+mathflashcards
+mathinvaders
+montyhallproblem
+pinball
+pivisualizer
+sleeping-beauty-master
+star-wars-master
+taroko_gorge
+textadventure_libraries
+threejs
+Wargaming
+wordvectors
+climatechangeexplorer
+deletionist
+gaming
